<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- TODO check that this placeholder is no longer used for release versions -->
    <string name="no_description_yet">PLACEHOLDER TEXT FOR DESCRIPTION</string>
    <string name="app_name">Sammelbox-Android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_album_selection">Album &amp; Saved Search Selection</string>
    <string name="title_activity_synchronization">Synchronization</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_album_item_browse">Browse Items</string>
    <string name="albums_label">Albums</string>
    <string name="saved_searches_label">Saved Searches</string>
    <string name="synchronize_button">Synchronize</string>
    <string name="synchronization">Synchronization</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="help_info">Sammelbox-Android is a mobile app that allows you to carry your Sammelbox collections 
        with you at any time.\r\n\r\nThese Sammelbox collections can be created using the free and open-source Sammelbox 
        application available for Windows, Linux and MacOS. What makes Sammelbox different is its easy of use, combined with 
        limitless possibilities to define your custom collections. Including everything from post cards to DVDs. 
        In fact, you define your collection using only those attributes you like.\r\n\r\nFurthermore, using the 
        inbuild synchronization, your collections are immediately accessible on your Android device and you are ready 
        to go!\r\n\r\nPlease visit www.Sammelbox.org for a video introduction of Sammelbox, download links and much more.</string>
    <string name="select_album">Select an album:</string>
    <string name="select_album_field">Select an album item field:</string>
    <string name="select_operator">Select an operator:</string>
    <string name="select_value_to_match">Value to match:</string>
    <string name="value_to_search_for">Value to search for</string>
    <string name="add_criteria_to_search">Add another criteria</string>
    <string name="search_matching_items">Search items</string>
    <string name="select_criteria_connector">Connect search terms by:</string>
    <string name="connect_by_and">and</string>
    <string name="connect_by_or">or</string>
    <string name="search_criteria">Search criteria</string>
    <string name="title_activity_search">Search</string>
    <string name="clear_search_criteria">Clear search criteria</string>
    <string name="title_activity_gallery">Gallery Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_gallery">Image Gallery</string>
    <string name="list_of_criteria">List of criteria</string>
    <string name="cancel">Cancel</string>
    <string name="click_to_sync">Click to synchronize. Please enter the synchronization code when asked..</string>
    <string name="search_for_sync_partner">Searching for Sammelbox PC-App to synchronize with</string>
    <string name="sync_successful">Synchronization successful. Have fun!</string>
    <string name="transferring_data">Transferring data. Click to cancel.</string>
    <string name="code_entered">Synchronize now</string>
    <string name="wrong_code_entered_abort">The code you have entered is invalid. Aborting!</string>
    <string name="enter_code_dialog_title">Enter Synchronization Code</string>
    <string name="enter_code_dialog_message">Please enter the synchronization code shown by Sammelbox on your PC</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
	<string name="album_pictures_not_available">In order to be able to view the original pictures, 
	    you will need to activate the full pictures synchronization in Sammelbox (Settings)</string>
	<string name="error_while_searching">An error occurred while searching for matching items</string>
	<string name="synchronize_first">Sammelbox-Android requires to be synchronized before its first use. 
	    See the help menu for further information.</string>
</resources>