<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblSearch"
        style="@style/sammelboxAndroidHeading"
        android:text="@string/search" />

    <Spinner
        android:id="@+id/comboSelectAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp" />

    <TextView
        style="@style/sammelboxAndroidSubHeading"
        android:text="@string/search_criteria" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblSelectAlbumItemField"
            style="@style/sammelboxSearchLabel"
            android:text="@string/select_album_field" />

        <Spinner
            android:id="@+id/comboSelectAlbumItemField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblSelectOperator"
            style="@style/sammelboxSearchLabel"
            android:text="@string/select_operator" />

        <Spinner
            android:id="@+id/comboSelectOperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblSelectValue"
            style="@style/sammelboxSearchLabel"
            android:text="@string/select_value_to_match" />

        <EditText
            android:id="@+id/edtSearchValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value_to_search_for" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblSearchCriteria"
        style="@style/sammelboxAndroidSubHeading"
        android:text="List of criteria"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listSearchCriteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblSelectCriteriaConnector"
            style="@style/sammelboxSearchLabel"
            android:text="@string/select_criteria_connector"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/radioSearchAndOrConnector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <RadioButton
                android:id="@+id/radioConnectByAnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_by_and"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioConnectByOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_by_or"
                android:checked="false" />
        </RadioGroup>
    </LinearLayout>

    <TextView style="@style/sammelboxAndroidSeparator" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnAddCriteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add_criteria_to_search" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/search_matching_items" />
    </LinearLayout>

</LinearLayout>