<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblSynchronization"
            style="@style/sammelboxAndroidHeading"
            android:text="@string/synchronization" />

        <ImageButton
            android:id="@+id/btnSynchronize"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/no_description_yet"
            android:scaleType="fitXY"
            android:src="@drawable/sync" />

        <ProgressBar
            android:id="@+id/pbTransferProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:max="100"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnCancelSynchronization"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/no_description_yet"
            android:enabled="false"
            android:scaleType="fitXY"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/lblSynchronizationInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/click_to_sync"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>